# leafx

./: .gitignore  README.md  example_models.py  pyproject.toml
eqxview/: __init__.py  _capture.py  app.py  introspection.py  model_loading.py  tensor_projection.py
eqxview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eqxview/static/: index.html  main.js  styles.css
leafx/: __init__.py  _capture.py  app.py  introspection.py  model_loading.py
leafx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
leafx/static/: index.html  main.js
