[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eqxview"
version = "0.1.0"
description = "Local browser visualizer for Equinox model hierarchies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "equinox>=0.11",
  "jax>=0.4.20",
  "numpy>=1.26",
  "cloudpickle>=3.0",
  "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["eqxview*"]
